--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:text="dgdgdgd"
+        android:text=""
         android:textColor="@color/white"
         android:paddingBottom="10dp"
         />
@@ -22,7 +22,7 @@
         android:id="@+id/tv_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="time"
+        android:text=""
         android:textSize="16sp"
         android:textColor="@color/white"
         />
